--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "classnames": "^2.2.6",
     "gatsby": "latest",
     "gatsby-plugin-material-ui": "next",
+    "gatsby-plugin-netlify-cms": "^4.0.1",
     "gatsby-plugin-react-helmet": "latest",
+    "netlify-cms-app": "^2.9.1",
     "react": "latest",
     "react-dom": "latest",
     "react-helmet": "latest",
