--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,9 +22,9 @@ collections:
         label: About Section
         name: about
         fields:
-          - { name: description, label: Description, widget: string }
+          - { name: description, label: Description, widget: markdown }
       - file: src/sections/contact/contact.md
         label: Contact Section
         name: contact
         fields:
-          - { name: description, label: Description, widget: string }
+          - { name: description, label: Description, widget: markdown }
