--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "next",
     "classnames": "^2.2.6",
+    "dotenv": "^8.0.0",
     "gatsby": "^2.5.5",
     "gatsby-image": "^2.1.0",
+    "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-material-ui": "next",
     "gatsby-plugin-netlify": "^2.0.17",
-    "gatsby-plugin-netlify-cms": "^4.0.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-remark-images": "^3.0.11",
-    "gatsby-remark-relative-images": "^0.2.2",
-    "gatsby-source-filesystem": "^2.0.36",
+    "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-source-contentful": "^2.0.61",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
-    "netlify-cms-app": "^2.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
