--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-scroll": "^1.7.11"
+    "react-scroll": "^1.7.11",
+    "react-typed": "^1.1.2"
   },
   "scripts": {
     "develop": "gatsby develop",
