--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "next",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "next",
+    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/icons": "^4.0.0-rc.0",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
     "gatsby": "^2.5.5",
     "gatsby-image": "^2.1.0",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-material-ui": "next",
+    "gatsby-plugin-material-ui": "^2.0.0-beta.2",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
