--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "gatsby-source-contentful": "^2.0.61",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-scroll": "^1.7.11",
     "react-typed": "^1.1.2"
   },
