--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@material-ui/icons": "^4.0.0-rc.0",
-    "@material-ui/styles": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.2",
     "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
-    "gatsby": "^2.5.5",
-    "gatsby-image": "^2.1.0",
+    "gatsby": "^2.8.6",
+    "gatsby-image": "^2.1.2",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-material-ui": "^2.0.0-beta.2",
+    "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-source-contentful": "^2.0.61",
+    "gatsby-source-contentful": "^2.0.67",
     "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-transformer-sharp": "^2.1.21",
     "i": "^0.3.6",
     "npm": "^6.9.0",
     "react": "^16.8.6",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0"
   }
