--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "rafi-barash-website",
+  "name": "rafael-barash-website",
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.1",
-    "@material-ui/icons": "^4.4.1",
-    "@material-ui/styles": "^4.4.1",
+    "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.8.2",
     "classnames": "^2.2.6",
-    "dotenv": "^8.1.0",
-    "gatsby": "^2.15.12",
-    "gatsby-image": "^2.2.18",
-    "gatsby-plugin-google-analytics": "^2.1.16",
-    "gatsby-plugin-manifest": "^2.2.16",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.18.17",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-material-ui": "^2.1.6",
-    "gatsby-plugin-netlify": "^2.1.12",
+    "gatsby-plugin-netlify": "^2.1.30",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.21",
-    "gatsby-plugin-sitemap": "^2.2.12",
-    "gatsby-source-contentful": "^2.1.34",
-    "gatsby-transformer-remark": "^2.6.22",
-    "gatsby-transformer-sharp": "^2.2.14",
+    "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-plugin-sitemap": "^2.2.24",
+    "gatsby-source-contentful": "^2.1.73",
+    "gatsby-transformer-remark": "^2.6.45",
+    "gatsby-transformer-sharp": "^2.3.9",
     "i": "^0.3.6",
-    "npm": "^6.11.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "npm": "^6.13.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "react-scroll": "^1.7.14",
+    "react-icons": "^3.8.0",
+    "react-scroll": "^1.7.15",
     "react-typed": "^1.2.0"
   },
   "scripts": {
@@ -40,8 +40,8 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.17.0"
   }
 }
