--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-scroll": "^1.7.15",
-    "react-typed": "^1.2.0"
+    "react-three-fiber": "^4.2.4",
+    "react-typed": "^1.2.0",
+    "three": "^0.116.1"
   },
   "scripts": {
     "develop": "gatsby develop",
