--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
     "i": "^0.3.6",
+    "lerp": "^1.0.3",
     "npm": "^6.13.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
