--- a/package.json
+++ b/package.json
@@ -23,17 +23,13 @@
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.9",
     "i": "^0.3.6",
-    "lerp": "^1.0.3",
     "npm": "^6.13.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-scroll": "^1.7.15",
-    "react-three-fiber": "^4.2.4",
-    "react-typed": "^1.2.0",
-    "three": "^0.116.1",
-    "use-cannon": "^0.4.7"
+    "react-typed": "^1.2.0"
   },
   "scripts": {
     "develop": "gatsby develop",
